# bazel_demo

./: BUILD.bazel  README.md  WORKSPACE  build.sh  run.sh
demo/: curl_test.cpp  curl_test.h  device_embedding_erico.cu.cc  device_embedding_erico.h  hello_world.cpp  hello_world.h  my_cuda_lib.cu  my_cuda_lib.h  run_cuda.cu.cc  test_cuda.cu
